# applescreen

./: CMakeLists.txt  README.md
cmake/: BuildAOM.cmake  BuildFFmpeg.cmake  BuildOpenscreen.cmake  BuildOpus.cmake  BuildSDL3.cmake  BuildVPX.cmake  Utils.cmake
patches/: 1_link_system_frameworks_for_ffmpeg_hw_accel.patch  2_bonjour_service.patch  3_sdl3.patch  4_link_system_frameworks_and_static_libraries.patch  5_my_glue_library.patch  6_hotfix_properly_close_window_and_sdl_on_macos.patch  7_glue_library_source.patch
src/: AppDelegate.h  AppDelegate.m  AudioRingBuffer.h  AudioRingBuffer.m  CMakeLists.txt  MetalVideoView.h  MetalVideoView.m  ReceiverViewController.h  ReceiverViewController.m  SenderViewController.h  SenderViewController.m  VideoWindowController.h  VideoWindowController.m  main.m
